Databases samples added
